fixed photo squish

--- a/react-app/src/components/StoryPage/index.css
+++ b/react-app/src/components/StoryPage/index.css
@@ -8,6 +8,7 @@
 
 .full-story-container {
     height: 100%;
+    width: 100%;
 }
 
 .full-page-story-details-div {
